5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1662_1390.log
== SUBMITION (2019-04-15 15:16:43) 
-- CODE:
a= float(input(" 1.20: "))
b= float(input("25.00: "))

if ("consumo ==< 100")
   print(round(a, 2))
else
   print(round(b, 2))
-- EXECUTION TIME:
0.154296
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if ("consumo ==< 100")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:47) 
-- CODE:
a= float(input(" 1.20: "))
b= float(input("25.00: "))

if ("consumo ==< 100")
   print(round(a, 2))
else
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if ("consumo ==< 100")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:17:00) 
-- CODE:
a= float(input(" 1.20: "))
b= float(input("25.00: "))

if ("consumo == < 100")
   print(round(a, 2))
else
   print(round(b, 2))
-- EXECUTION TIME:
0.14664
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if ("consumo == < 100")
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:03) 
-- CODE:
a= float(input(" 1.20: "))
b= float(input("25.00: "))

if ("consumo == < 100")
   print(round(a, 2))
else
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if ("consumo == < 100")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:17:41) 
-- CODE:
a= float(input(" 1.20: "))
b= float(input("25.00: "))

if (consumo == < 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.141997
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (consumo == < 100)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:42) 
-- CODE:
a= float(input(" 1.20: "))
b= float(input("25.00: "))

if (consumo == < 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (consumo == < 100)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:20:03) 
-- CODE:
a= float(input(" 1.20 se consumo ==> 100: "))
b= float(input(" 25.00 se consumo < 100: "))

if (consumo == < 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.143995
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (consumo == < 100)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:07) 
-- CODE:
a= float(input(" 1.20 se consumo ==> 100: "))
b= float(input(" 25.00 se consumo < 100: "))

if (consumo == < 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (consumo == < 100)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:20:33) 
-- CODE:
a= float(input(" 1.20 se consumo ==< 100: "))
b= float(input(" 25.00 se consumo < 100: "))

if (consumo == < 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.209281
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (consumo == < 100)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:27:07) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (consumo ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.217624
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (consumo ==> 100)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:27:08) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (consumo ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.211195
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (consumo ==> 100)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:09) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (consumo ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (consumo ==> 100)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:27:24) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (c ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.200631
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (c ==> 100)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:27:25) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (c ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.131434
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (c ==> 100)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:28:22) 
-- CODE:
a= float(input("1.20 se c ==> 100: "))
b= float(input("25.00 se c < 100: "))

if (c ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.17886
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (c ==> 100)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:28:23) 
-- CODE:
a= float(input("1.20 se c ==> 100: "))
b= float(input("25.00 se c < 100: "))

if (c ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.12551
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (c ==> 100)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:24) 
-- CODE:
a= float(input("1.20 se c ==> 100: "))
b= float(input("25.00 se c < 100: "))

if (c ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (c ==> 100)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:28:36) 
-- CODE:
a= float(input("1.20 se c ==> 100: "))
b= float(input("25.00 se c < 100: "))

if 
(c ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.199148
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if 
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:38) 
-- CODE:
a= float(input("1.20 se c ==> 100: "))
b= float(input("25.00 se c < 100: "))

if 
(c ==> 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:28:54) 
-- CODE:
a= float(input("1.20 se c ==> 100: "))
b= float(input("25.00 se c < 100: "))

if ("c ==> 100")
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.186524
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if ("c ==> 100")
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:54) 
-- CODE:
a= float(input("1.20 se c ==> 100: "))
b= float(input("25.00 se c < 100: "))

if ("c ==> 100")
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if ("c ==> 100")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:32:36) 
-- CODE:
a= float(input("1.20 se c ==< 100: "))
b= float(input("25.00 se c > 100: "))

if (1.20 se c ==< 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (1.20 se c ==< 100)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:33:52) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (1.20 se c ==< 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.191818
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (1.20 se c ==< 100)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:53) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (1.20 se c ==< 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (1.20 se c ==< 100)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:35:04) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if ("1.20 se c ==< 100: ")
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.211617
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if ("1.20 se c ==< 100: ")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:05) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if ("1.20 se c ==< 100: ")
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if ("1.20 se c ==< 100: ")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:35:17) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if ("1.20 se c ==< 100")
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.260768
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if ("1.20 se c ==< 100")
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:21) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if ("1.20 se c ==< 100")
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if ("1.20 se c ==< 100")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:35:49) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (a se c ==< 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.173299
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (a se c ==< 100)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:50) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (a se c ==< 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (a se c ==< 100)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:36:04) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if 
(a se c ==< 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.196059
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if 
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:05) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if 
(a se c ==< 100)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:36:23) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if ("a se c ==< 100")
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.218902
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if ("a se c ==< 100")
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:24) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if ("a se c ==< 100")
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if ("a se c ==< 100")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:40:49) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (100 ==< c)
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.119406
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (100 ==< c)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:50) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (100 ==< c)
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (100 ==< c)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:41:06) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (100 ==< c) :
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.142715
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (100 ==< c) :
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:41:07) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00: "))

if (100 ==< c) :
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.185156
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (100 ==< c) :
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:43:38) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if (1.20 se consumo ==< 100) :
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.220207
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (1.20 se consumo ==< 100) :
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:43:39) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if (1.20 se consumo ==< 100) :
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.137067
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (1.20 se consumo ==< 100) :
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:39) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if (1.20 se consumo ==< 100) :
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (1.20 se consumo ==< 100) :
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:43:51) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if (se consumo ==< 100) :
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.140784
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (se consumo ==< 100) :
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:53) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if (se consumo ==< 100) :
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (se consumo ==< 100) :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:43:53) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if (se consumo ==< 100) :
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.281379
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (se consumo ==< 100) :
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:44:01) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else 
   print(round(b, 2))
-- EXECUTION TIME:
0.188541
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 6
    else 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:02) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else 
   print(round(b, 2))
-- ERROR:
File "XXXX", line 6
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:44:46) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else ("se consumo > 100")
   print(round(b, 2))
-- EXECUTION TIME:
0.142746
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 6
    else ("se consumo > 100")
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:47) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else ("se consumo > 100")
   print(round(b, 2))
-- ERROR:
File "XXXX", line 6
    else ("se consumo > 100")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:44:58) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else ("se consumo > 100") :
   print(round(b, 2))
-- EXECUTION TIME:
0.168214
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 6
    else ("se consumo > 100") :
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:59) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else ("se consumo > 100") :
   print(round(b, 2))
-- ERROR:
File "XXXX", line 6
    else ("se consumo > 100") :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:45:08) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else 
("se consumo > 100") :
   print(round(b, 2))
-- EXECUTION TIME:
0.184544
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 6
    else 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:45:08) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else 
("se consumo > 100") :
   print(round(b, 2))
-- ERROR:
File "XXXX", line 6
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:45:26) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
if ("se consumo > 100") :
   print(round(b, 2))
-- EXECUTION TIME:
0.216406
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 2, in <module>
    b= float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:45:27) 
-- CODE:
a= float(input("1.20 se consumo ==< 100: "))
b= float(input("25.00 + 1.40 se consumo > 100: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
if ("se consumo > 100") :
   print(round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:46:09) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00 + 1.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
if ("se consumo > 100") :
   print(round(b, 2))
-- EXECUTION TIME:
0.145611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 2, in <module>
    b= float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:46:10) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00 + 1.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
if ("se consumo > 100") :
   print(round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:46:36) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00 + 1.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else
("se consumo > 100") :
   print(round(b, 2))
-- EXECUTION TIME:
0.184658
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:46:37) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00 + 1.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else
("se consumo > 100") :
   print(round(b, 2))
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:47:10) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00 + 1.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else
   ("se consumo > 100") :
   print(round(b, 2))
-- EXECUTION TIME:
0.141508
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:10) 
-- CODE:
a= float(input("1.20: "))
b= float(input("25.00 + 1.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else
   ("se consumo > 100") :
   print(round(b, 2))
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:50:14) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else
   ("se consumo > 100") :
   print(round(b, 2))
-- EXECUTION TIME:
0.156185
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 6
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:15) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
else
   ("se consumo > 100") :
   print(round(b, 2))
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:50:36) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
	
else
   ("se consumo > 100") :
   print(round(b, 2))
-- EXECUTION TIME:
0.194209
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 7
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:50:45) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if ("se consumo ==< 100") :
   print(round(a, 2))
	
else ("se consumo > 100") :
   print(round(b, 2))
-- EXECUTION TIME:
0.162564
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 7
    else ("se consumo > 100") :
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:50:59) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if (se consumo ==< 100) :
   print(round(a, 2))
	
else 
   (se consumo > 100) :
   print(round(b, 2))
-- EXECUTION TIME:
0.153826
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (se consumo ==< 100) :
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:01) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if (se consumo ==< 100) :
   print(round(a, 2))
	
else 
   (se consumo > 100) :
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (se consumo ==< 100) :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:51:27) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if ("se consumo ==< 100: ") :
   print(round(a, 2))
	
else 
   ("se consumo > 100: ") :
   print(round(b, 2))
-- EXECUTION TIME:
0.131305
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 7
    else 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:52:14) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if (se consumo ==< 100) :
   print(round(a, 2))
	
else 
   (se consumo > 100) :
   print(round(b, 2))
-- EXECUTION TIME:
0.194494
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (se consumo ==< 100) :
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:52:15) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if (se consumo ==< 100) :
   print(round(a, 2))
	
else 
   (se consumo > 100) :
   print(round(b, 2))
-- EXECUTION TIME:
0.138451
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (se consumo ==< 100) :
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:26) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if (se consumo ==< 100) :
   print(round(a, 2))
	
else 
   (se consumo > 100) :
   print(round(b, 2))
-- ERROR:
File "XXXX", line 4
    if (se consumo ==< 100) :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:53:33) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if (consumo ==< 100) :
   print(round(a, 2))
	
else 
   (se consumo > 100) :
   print(round(b, 2))
-- EXECUTION TIME:
0.158446
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (consumo ==< 100) :
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:53:42) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if (consumo ==< 100) :
   print(round(a, 2))
	
else 
    (consumo > 100) :
   print(round(b, 2))
-- EXECUTION TIME:
0.177679
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (consumo ==< 100) :
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:53:43) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if (consumo ==< 100) :
   print(round(a, 2))
	
else 
    (consumo > 100) :
   print(round(b, 2))
-- EXECUTION TIME:
0.137426
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if (consumo ==< 100) :
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:53:57) 
-- CODE:
a= float(input("1.20: "))
b= float(input("26.40: "))

if 
(consumo ==< 100) :
   print(round(a, 2))
	
else 
    (consumo > 100) :
   print(round(b, 2))
-- EXECUTION TIME:
0.152723
-- ERROR:
  File "/home/codebench/codes/1662/1390/main.py", line 4
    if 
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
